@@ -1,0 +1,72 @@
+Acts As Commentable
+=================
+
+Allows for comments to be added to multiple and different models.
+
+== Resources
+
+Install
+
+  Rails
+
+   * To install as a plugin:
+ 
+    script/plugin install http://github.com/jackdempsey/acts_as_commentable.git
+
+  Merb/Rails
+  
+   * To install as a gem:
+ 
+   rake install
+ 
+ * Create a new rails migration and add the following self.up and self.down methods
+ 
+  def self.up
+    create_table :comments do |t|
+      t.string :title, :limit => 50, :default => "" 
+      t.text :comment, :default => "" 
+      t.references :commentable, :polymorphic => true
+      t.references :user
+      t.timestamps
+    end
+
+    add_index :comments, :commentable_type
+    add_index :comments, :commentable_id
+    add_index :comments, :user_id
+  end
+
+  def self.down
+    drop_table :comments
+  end
+
+== Usage
+ Merb Users:
+ * add 'dependency "acts_as_commentable"' to your init.rb or dependencies.rb if using merb-stack
+ 
+ * Make your ActiveRecord model act as commentable.
+ 
+ class Model < ActiveRecord::Base
+ 	acts_as_commentable
+ end
+ 
+ * Add a comment to a model instance
+ 
+ model = Model.new
+ comment = Comment.new
+ comment.comment = 'Some comment'
+ model.comments << comment
+
+ # Following doesn't work/make sense to me. Leaving for historical sake -- Jack
+ # * Each comment reference commentable object
+ #
+ # model = Model.find(1)
+ # model.comments.get(0).commentable == model
+
+== Credits
+
+Xelipe - This plugin is heavily influenced by Acts As Taggable.
+
+== More
+
+http://www.juixe.com/techknow/index.php/2006/06/18/acts-as-commentable-plugin/
+http://www.juixe.com/projects/acts_as_commentable
