@@ -1,0 +1,3 @@
+# Include hook code here
+require 'acts_as_commentable'
+
