@@ -1,0 +1,4 @@
+# desc "Explaining what the task does"
+# task :acts_as_commentable do
+#   # Task goes here
+# end
