@@ -1,0 +1,8 @@
+require 'test/unit'
+
+class ActsAsCommentableTest < Test::Unit::TestCase
+  # Replace this with your real tests.
+  def test_this_plugin
+    flunk
+  end
+end
