@@ -1,5 +1,10 @@
 It does not matter how slowly you go as long as you do not stop. -- Confucius
 
+Thu, Feb 12, 2008
+---------------------------------------------------------------------
+- Installed [acts_as_commentable] plugin.
+- More work designing simple and consistent landing pages.
+
 Wed, Feb 11, 2008
 ---------------------------------------------------------------------
 - Researching and mocking up landing pages for campaigns and leads.
